<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.groupecerco.tp.macalculatrice.MainActivity">

    <me.grantland.widget.AutofitTextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="#202020"
        android:ems="10"
        android:gravity="center_vertical|end"
        android:hint="@string/hint_display"
        android:inputType="textPersonName"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="100sp"
        android:maxLines="1"
        autofit:minTextSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_AC"
                style="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#C6C8CA"
                android:text="@string/btn_ac"
                android:textSize="30sp" />


            <Button
                android:id="@+id/btn_plus_minus"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#C6C8CA"
                android:text="@string/btn_plus_minus"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_percent"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#C6C8CA"
                android:text="@string/btn_percent"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_div"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F98B11"
                android:text="@string/btn_div"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_7"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_8"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_mul"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F98B11"
                android:text="@string/btn_mul"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_min"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F98B11"
                android:text="@string/btn_minus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDCED1"
                android:text="@string/btn_3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_add"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F98B11"
                android:text="@string/btn_add"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="#CDCED1"
                android:gravity="start|center_vertical"
                android:paddingEnd="60dp"
                android:paddingStart="60dp"
                android:text="@string/btn_0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_point"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="#CDCED1"
                android:text="@string/btn_point"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_equal"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="#F98B11"
                android:text="@string/btn_equal"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
